[package]
name = "string_repeater" # Renamed for clarity
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Required for handling Ctrl+C signal for graceful shutdown
ctrlc = "3.4"

# Rand is NOT needed now
